// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TradeStuff doesn't show the escrow when the releaseTxId and the escrow are not set 1`] = `
<View>
  <TradeStuffSeparator
    disputeActive={false}
    escrow=""
    paymentMethod="sepa"
  />
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 8,
        "justifyContent": "flex-start",
        "marginTop": 6,
      }
    }
  >
    <ChatButton
      contract={
        {
          "disputeActive": false,
          "escrow": "",
          "paymentMethod": "sepa",
          "releaseTxId": undefined,
        }
      }
    />
  </View>
</View>
`;

exports[`TradeStuff renders correctly 1`] = `
<View>
  <TradeStuffSeparator
    disputeActive={false}
    escrow="0x123"
    paymentMethod="sepa"
    releaseTxId="0x123"
  />
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 8,
        "justifyContent": "flex-start",
        "marginTop": 6,
      }
    }
  >
    <Escrow
      contract={
        {
          "disputeActive": false,
          "escrow": "0x123",
          "paymentMethod": "sepa",
          "releaseTxId": "0x123",
        }
      }
    />
    <ChatButton
      contract={
        {
          "disputeActive": false,
          "escrow": "0x123",
          "paymentMethod": "sepa",
          "releaseTxId": "0x123",
        }
      }
    />
  </View>
</View>
`;

exports[`TradeStuff renders correctly when the paymentmethod includes cash 1`] = `
<View>
  <TradeStuffSeparator
    disputeActive={false}
    escrow="0x123"
    paymentMethod="cash.DE"
    releaseTxId="0x123"
  />
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 8,
        "justifyContent": "flex-start",
        "marginTop": 6,
      }
    }
  >
    <Escrow
      contract={
        {
          "disputeActive": false,
          "escrow": "0x123",
          "paymentMethod": "cash.DE",
          "releaseTxId": "0x123",
        }
      }
    />
    <ChatButton
      contract={
        {
          "disputeActive": false,
          "escrow": "0x123",
          "paymentMethod": "cash.DE",
          "releaseTxId": "0x123",
        }
      }
    />
  </View>
</View>
`;
